--- a/Year7-today.html
+++ b/Year7-today.html
@@ -140,13 +140,13 @@
               // Array of objects with date, time, and corresponding URL
               const schedule = [
                 { date: '2024-12-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQsq6uC-NNBQqNumZOleyGYAZraHsnegd5gs_Ps9AlqEqw' },
-                { date: '2024-12-16', time: '06:59', url: 'n/a' },
-                { date: '2024-12-17', time: '06:59', url: 'n/a' },
-                { date: '2024-12-18', time: '06:59', url: 'n/a' },
-                { date: '2024-12-19', time: '06:59', url: 'n/a' },
-                { date: '2024-12-20', time: '06:59', url: 'n/a' },
-                { date: '2024-12-21', time: '06:59', url: 'n/a' },
-                { date: '2024-12-22', time: '06:59', url: 'n/a' },
+                { date: '2024-12-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTUOraE8QbmQ6F5-sgeclLSAaE0tOUq4UZTvgl6Nzhg4HU' },
+                { date: '2024-12-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRumFSXoq99TKwzZlSx015NASWJfdk1BV0wrvaN6Aq_Ps8' },
+                { date: '2024-12-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQWd9646sRpT5xdIhUBrX0jAWJgz0C8k3ToIyRYiQxcvTc' },
+                { date: '2024-12-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRf4fk6Dp06QJkZwVixnZZ-AWIbv64uePrHhccJK9GVE0o' },
+                { date: '2024-12-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTBch4A1EqSTK7f-MmMZma8AZqmKwdqxI6ReM6mn7zLJEI' },
+                { date: '2024-12-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSfoNK28mMMRqSs9dO3DQjfAeUyFqIgOmDNQLYdR9HuZCg' },
+                { date: '2024-12-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTQC9t1axCYSbseOW5E4xpWAQhoksTvalMMpESJadMiAKs' },
                 { date: '2024-12-23', time: '06:59', url: 'n/a' },
                 { date: '2024-12-24', time: '06:59', url: 'n/a' },
                 { date: '2024-12-25', time: '06:59', url: 'n/a' },
