--- a/year7-answer.html
+++ b/year7-answer.html
@@ -140,13 +140,13 @@
               // Array of objects with date, time, and corresponding URL
               const schedule = [
                 { date: '2024-12-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRj9ZhnbkR6Q4GBTLzfoCAXAbuSOx4MnlzRzezVV3v8EVY' },
-                { date: '2024-12-16', time: '06:59', url: 'n/a' },
-                { date: '2024-12-17', time: '06:59', url: 'n/a' },
-                { date: '2024-12-18', time: '06:59', url: 'n/a' },
-                { date: '2024-12-19', time: '06:59', url: 'n/a' },
-                { date: '2024-12-20', time: '06:59', url: 'n/a' },
-                { date: '2024-12-21', time: '06:59', url: 'n/a' },
-                { date: '2024-12-22', time: '06:59', url: 'n/a' },
+                { date: '2024-12-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQab01bsXLfQ6oFgW6ZxGJ5AS_ADD_NsITFJBUaAZc2KUA' },
+                { date: '2024-12-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQStWWfmxnwXT6gOSFqC193oATt5r5VDRryeNpncmZmRDqY' },
+                { date: '2024-12-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT_UpSbP6msSYPMPREOQVfYAc4XdxvBuhsjjvt7B273e4Q' },
+                { date: '2024-12-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRI5wF7Zd9vSot8zWEwAUMqAR9yEb87fikVg2xWJN7Ck2A' },
+                { date: '2024-12-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQy8f9v9IjHS5c6pKWav6GpAUJuY2ZBBfufsHOqWyIeDF0' },
+                { date: '2024-12-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTtEfGbasoZQaQHb9ja3IG_ARbTVrV0CFbtVOgv8rPy9jU' },
+                { date: '2024-12-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQDrXWo-TjPSZalACKXlVcQAcdm8YGHtWgTNSiPW_eS5k8' },
                 { date: '2024-12-23', time: '06:59', url: 'n/a' },
                 { date: '2024-12-24', time: '06:59', url: 'n/a' },
                 { date: '2024-12-25', time: '06:59', url: 'n/a' },
