--- a/Year7-today.html
+++ b/Year7-today.html
@@ -148,7 +148,7 @@
                 { date: '2024-12-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSfoNK28mMMRqSs9dO3DQjfAeUyFqIgOmDNQLYdR9HuZCg' },
                 { date: '2024-12-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTQC9t1axCYSbseOW5E4xpWAQhoksTvalMMpESJadMiAKs' },
                 { date: '2024-12-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRxBh78j_X3Rp_-en-s-AtkAeNRooB0FP7qMnUvDKmlwYs' },
-                { date: '2024-12-24', time: '06:59', url: 'n/a' },
+                { date: '2024-12-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRxBh78j_X3Rp_-en-s-AtkAeNRooB0FP7qMnUvDKmlwYs' },
                 { date: '2024-12-25', time: '06:59', url: 'n/a' },
                 { date: '2024-12-26', time: '06:59', url: 'n/a' },
                 { date: '2024-12-27', time: '06:59', url: 'n/a' }                        
