--- a/year7-answer.html
+++ b/year7-answer.html
@@ -148,10 +148,10 @@
                 { date: '2024-12-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTtEfGbasoZQaQHb9ja3IG_ARbTVrV0CFbtVOgv8rPy9jU' },
                 { date: '2024-12-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQDrXWo-TjPSZalACKXlVcQAcdm8YGHtWgTNSiPW_eS5k8' },
                 { date: '2024-12-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ5hGzYWWf2T7RC903YjR1WAY_jLDodfMoHhr9uftCZj7s' },
-                { date: '2024-12-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ5hGzYWWf2T7RC903YjR1WAY_jLDodfMoHhr9uftCZj7s' },
-                { date: '2024-12-25', time: '06:59', url: 'n/a' },
-                { date: '2024-12-26', time: '06:59', url: 'n/a' },
-                { date: '2024-12-27', time: '06:59', url: 'n/a' }          
+                { date: '2024-12-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQOMIn2tB4yQIl14OtApPfkAYSm-2_uqiYwoHVElnVoWPU' },
+                { date: '2024-12-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRyciNzEt9EQKHuZHJ1MMPGARJLurIllRBZ5xiDjwpX_k0' },
+                { date: '2024-12-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQjzFd13G-iS5Vx3FdC-JuxAfo2-66Gt5BEX_ukntOXaB0' },
+                { date: '2024-12-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRA_xOb06HiT6DbLLVjX-JyAWhe5FGi2LvFdU7d8IEbm10' }          
               ];
       
 function updateIframeSrc() {
