--- a/year7-answer.html
+++ b/year7-answer.html
@@ -139,19 +139,16 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2024-12-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRj9ZhnbkR6Q4GBTLzfoCAXAbuSOx4MnlzRzezVV3v8EVY' },
-                { date: '2024-12-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQab01bsXLfQ6oFgW6ZxGJ5AS_ADD_NsITFJBUaAZc2KUA' },
-                { date: '2024-12-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQStWWfmxnwXT6gOSFqC193oATt5r5VDRryeNpncmZmRDqY' },
-                { date: '2024-12-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT_UpSbP6msSYPMPREOQVfYAc4XdxvBuhsjjvt7B273e4Q' },
-                { date: '2024-12-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRI5wF7Zd9vSot8zWEwAUMqAR9yEb87fikVg2xWJN7Ck2A' },
-                { date: '2024-12-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQy8f9v9IjHS5c6pKWav6GpAUJuY2ZBBfufsHOqWyIeDF0' },
-                { date: '2024-12-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTtEfGbasoZQaQHb9ja3IG_ARbTVrV0CFbtVOgv8rPy9jU' },
-                { date: '2024-12-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQDrXWo-TjPSZalACKXlVcQAcdm8YGHtWgTNSiPW_eS5k8' },
-                { date: '2024-12-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ5hGzYWWf2T7RC903YjR1WAY_jLDodfMoHhr9uftCZj7s' },
-                { date: '2024-12-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQOMIn2tB4yQIl14OtApPfkAYSm-2_uqiYwoHVElnVoWPU' },
-                { date: '2024-12-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRyciNzEt9EQKHuZHJ1MMPGARJLurIllRBZ5xiDjwpX_k0' },
-                { date: '2024-12-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQjzFd13G-iS5Vx3FdC-JuxAfo2-66Gt5BEX_ukntOXaB0' },
-                { date: '2024-12-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRA_xOb06HiT6DbLLVjX-JyAWhe5FGi2LvFdU7d8IEbm10' }          
+                { date: '2024-12-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTBEMfEB2QsR7tEpEbmroVVAd-QB-vZ3Jq3ASyWk_9FFw8' },
+                { date: '2024-12-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQhTtUL2AXXTLewQX004BmrAT8GRnDmqTAjRFyXBrTAAes' },
+                { date: '2024-12-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSC2AHqugiJSJ650RrdqxnwAQz-nkaUKypbYoBWEmtB5zM' },
+                { date: '2024-12-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSBkHgQ_J0jTJrFb5zIp7KNAUjs7_OaXN2E0Pbc_L3UA8I' },
+                { date: '2025-01-01', time: '06:59', url: 'n/a' },
+                { date: '2025-01-02', time: '06:59', url: 'n/a' },
+                { date: '2025-01-03', time: '06:59', url: 'n/a' },
+                { date: '2025-01-04', time: '06:59', url: 'n/a' },
+                { date: '2025-01-05', time: '06:59', url: 'n/a' },
+                { date: '2025-01-06', time: '06:59', url: 'n/a' }          
               ];
       
 function updateIframeSrc() {
