--- a/Year7-today.html
+++ b/Year7-today.html
@@ -139,19 +139,16 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2024-12-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQsq6uC-NNBQqNumZOleyGYAZraHsnegd5gs_Ps9AlqEqw' },
-                { date: '2024-12-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTUOraE8QbmQ6F5-sgeclLSAaE0tOUq4UZTvgl6Nzhg4HU' },
-                { date: '2024-12-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRumFSXoq99TKwzZlSx015NASWJfdk1BV0wrvaN6Aq_Ps8' },
-                { date: '2024-12-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQWd9646sRpT5xdIhUBrX0jAWJgz0C8k3ToIyRYiQxcvTc' },
-                { date: '2024-12-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRf4fk6Dp06QJkZwVixnZZ-AWIbv64uePrHhccJK9GVE0o' },
-                { date: '2024-12-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTBch4A1EqSTK7f-MmMZma8AZqmKwdqxI6ReM6mn7zLJEI' },
-                { date: '2024-12-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSfoNK28mMMRqSs9dO3DQjfAeUyFqIgOmDNQLYdR9HuZCg' },
-                { date: '2024-12-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTQC9t1axCYSbseOW5E4xpWAQhoksTvalMMpESJadMiAKs' },
-                { date: '2024-12-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRxBh78j_X3Rp_-en-s-AtkAeNRooB0FP7qMnUvDKmlwYs' },
-                { date: '2024-12-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTz_PjM0zbBSoGvLK0mHdumAbxbPembI91ogqG4E06BsIc' },
-                { date: '2024-12-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQKTEfMpjlPQI5NW7SBxq62AU9GaFpbQGkLM-RUoGiTEHI' },
-                { date: '2024-12-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTjCk_2i03vRrWyrSO5-qLWAZu3NcLNhsJsHyBtJrlwCic' },
-                { date: '2024-12-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRuwIMOo14LQK6px2skmykoAYeZJI_KQkqRzUXIWnfzx68' }                        
+                { date: '2024-12-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS8QmB6pe2uR6u152f3iK3YAcehVSnnS-E-gd9mfMvPLN8' },
+                { date: '2024-12-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQaM4v1JODBQ6_g4NGoG2-9AS-2D0yZsLIc7-hJ0QV7CI8' },
+                { date: '2024-12-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQw0eyvsP3vTIC6ypgrTeIHAfRCsRJT7vK_IMJmAo1IeJs' },
+                { date: '2024-12-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ4bYE-4yjsSqVvYw7wUKFdAZraRJ-LnVNKkvJ7u7oXd28' },
+                { date: '2025-01-01', time: '06:59', url: 'n/a' },
+                { date: '2025-01-02', time: '06:59', url: 'n/a' },
+                { date: '2025-01-03', time: '06:59', url: 'n/a' },
+                { date: '2025-01-04', time: '06:59', url: 'n/a' },
+                { date: '2025-01-05', time: '06:59', url: 'n/a' },
+                { date: '2025-01-06', time: '06:59', url: 'n/a' }                        
               ];
       
               function updateIframeSrc() {
