--- a/year8-today.html
+++ b/year8-today.html
@@ -139,19 +139,16 @@
           <script>
             
               const schedule = [
-                { date: '2024-12-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQLwfqMiut-QqI-JzjtpM2PAeEze1i-73z6TeI-Ay3yBIg' },
-                { date: '2024-12-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT7nkvskmogRpZTVeDVc06qAad2qRtiK_8_mSj9wMdyDvM' },
-                { date: '2024-12-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRxXUWYk1eRQ7NO6Cs2nQDdATx4kw0J45neAt_PhvtnNd0' },
-                { date: '2024-12-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS4xmzQRQ0LTKl4xE5SOxHaAUJWsC3-Of8OGb6mHk14SFE' },
-                { date: '2024-12-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS4xmzQRQ0LTKl4xE5SOxHaAUJWsC3-Of8OGb6mHk14SFE' },
-                { date: '2024-12-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ5T26w5f6pQr5uOaSz3-w7AfrDDuuNhEeF8GjlYQv2rHk' },
-                { date: '2024-12-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQZWKWk2GfjSaOiQRU7jP64AfJcfwvut_ZrmpLmKG6zpRo' },
-                { date: '2024-12-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTo_ojVQoE8SJ3ZyIJuFy5UAZV7jnx9stYJ5ecCTkmyxw0' },
-                { date: '2024-12-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTnm4s_Xy27Qbwm59l32StGAUMR6MtCQPjGP8IRk9agdvo' },
-                { date: '2024-12-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS5ABN25yrESrFiYwFX2xkJAUH0Gngljrb7QWTt9RH15m4' },
-                { date: '2024-12-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR_cB48NLh9QIXpeH32Y4sJAThe9LVtJjuT4GETeF1Nozk' },
-                { date: '2024-12-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQReuo4ev59VT5usfAVKuhEpAbqWVWONM_NzD4sSUNGoClQ' },
-                { date: '2024-12-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQHt8vg6CRSR697No9aL0sdAaj2hDOZqHiksOmXzFWZ2z8' }                                          
+                { date: '2024-12-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT2PzqGC2P6TYI3uxe_R_4tAYV7ULSTAGb3HVf0uHSLj9I' },
+                { date: '2024-12-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTDECz6PS6PTqAl8Cpi00mtAfaBYmWnMFPMRO8hb-KE0k8' },
+                { date: '2024-12-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ5kyVeGKxXTrFcoZ1wtFXwARlP6V3MF2qBriltkrq-Svc' },
+                { date: '2024-12-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSfE7zsg0LERKzn6fBrAkKoATr3EB0MT2TdSDOf_2eBRI0' },
+                { date: '2025-01-01', time: '06:59', url: 'n/a' },
+                { date: '2025-01-02', time: '06:59', url: 'n/a' },
+                { date: '2025-01-03', time: '06:59', url: 'n/a' },
+                { date: '2025-01-04', time: '06:59', url: 'n/a' },
+                { date: '2025-01-05', time: '06:59', url: 'n/a' },
+                { date: '2025-01-06', time: '06:59', url: 'n/a' }                                         
               ];      
       
 function updateIframeSrc() {
