--- a/Year7-today.html
+++ b/Year7-today.html
@@ -139,16 +139,15 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2024-12-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS8QmB6pe2uR6u152f3iK3YAcehVSnnS-E-gd9mfMvPLN8' },
-                { date: '2024-12-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQaM4v1JODBQ6_g4NGoG2-9AS-2D0yZsLIc7-hJ0QV7CI8' },
-                { date: '2024-12-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQw0eyvsP3vTIC6ypgrTeIHAfRCsRJT7vK_IMJmAo1IeJs' },
-                { date: '2024-12-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ4bYE-4yjsSqVvYw7wUKFdAZraRJ-LnVNKkvJ7u7oXd28' },
-                { date: '2025-01-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSfkJPClSeSS7q_w_Ge9iloARCHd0F7Jzeu_Dmoo2r2Bsc' },
-                { date: '2025-01-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT0aa581SIZTZG2MAEbprfcATD0p-xpwlcLYgPvwUUO4uU' },
-                { date: '2025-01-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTUCwitJnBNTaRvags7vjryAXqMcfhlMlncUji49w27ACM' },
-                { date: '2025-01-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQNiW8eUHaOT7pxuT-MjTUmAeVABE_J8quv-6OypSLUmNE' },
-                { date: '2025-01-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTqqnDL_PlGQqDc706a__T3Ac3HQ4imIfUkhx6GA8GbMf4' },
-                { date: '2025-01-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTV0RzG6Y8iS4l1ZJji_Q71AawD9GFFbyAQRvd7rEfslZY' }                        
+                { date: '2025-01-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTV0RzG6Y8iS4l1ZJji_Q71AawD9GFFbyAQRvd7rEfslZY' },
+                { date: '2024-01-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ5XEhaPeY1S7ArsmYCkmNLAbOvYPzhTP1FS3UVpiT45OY' },
+                { date: '2024-01-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRZxP_O3OY9S7UHPpKrS8PfAYoc35XY5trJF2nAbtWSuSs' },
+                { date: '2024-01-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRN7lWysju7TI7xe9MP4Oa5AcNOD-gkKSC7PjJQt33HRJM' },
+                { date: '2025-01-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRqwreKdbx-Q6aslvMf9TxAASUh5MeKJ_3ul74U6_zD1zA' },
+                { date: '2025-01-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQYKCYtGtfkRoQC-rKCSdjrAfbDz09wzDfXKJgv3rUlSo4' },
+                { date: '2025-01-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSd3tptizUDToAY1XHYtGz5AWeTVf2qF_YFGBFOaESp89E' },
+                { date: '2025-01-13', time: '06:59', url: 'n/a' },
+                { date: '2025-01-14', time: '06:59', url: 'n/a' }                        
               ];
       
               function updateIframeSrc() {
