--- a/year8-today.html
+++ b/year8-today.html
@@ -139,16 +139,15 @@
           <script>
             
               const schedule = [
-                { date: '2024-12-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT2PzqGC2P6TYI3uxe_R_4tAYV7ULSTAGb3HVf0uHSLj9I' },
-                { date: '2024-12-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTDECz6PS6PTqAl8Cpi00mtAfaBYmWnMFPMRO8hb-KE0k8' },
-                { date: '2024-12-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ5kyVeGKxXTrFcoZ1wtFXwARlP6V3MF2qBriltkrq-Svc' },
-                { date: '2024-12-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSfE7zsg0LERKzn6fBrAkKoATr3EB0MT2TdSDOf_2eBRI0' },
-                { date: '2025-01-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTrOct3Iz0wQpu5o6pPE3MDAW1mb2oUyK4Wm5tUDjIubzw' },
-                { date: '2025-01-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQVcj6FQc2vQJ1xnYcmvwgeARbuEWyDibdZGDX2j7CnFhE' },
-                { date: '2025-01-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQWerSY5lJlS7j0JiS-wAoqAZHYSyYFS8IUo-Xl8pys4h8' },
-                { date: '2025-01-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS8OaOpxNKtTYIE2A2R4_q0AZh4E7-YQKVIQ-JsNLkNVAY' },
-                { date: '2025-01-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSixMs5OzwKRp1rskTOi_o2AfL1uh5LFznZxv28un0WcQI' },
-                { date: '2025-01-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSEEU-leGDgRrOQqpQPT_w2AW5riUgNDFYo7Y0sAMpYNMQ' }                                         
+                { date: '2025-01-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSEEU-leGDgRrOQqpQPT_w2AW5riUgNDFYo7Y0sAMpYNMQ' },
+                { date: '2025-01-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQERG63fX3xTa_hSraxin89AejoZ_G-RkP4qTiJ0qEfDU0' },
+                { date: '2025-01-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSuiUBak9fbSL4VcIG6hJiGAS_8TU27Zqg9xA9IB1Z0nhw' },
+                { date: '2025-01-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQbSoVIjgYzSped1LC48_wKAepY9vMUNzZFxHFne-sTbuE' },
+                { date: '2025-01-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRl-6gOJbNlQoMR3j2zHIP0AUnDZdlkOPPtGn8ZSmhHtD4' },
+                { date: '2025-01-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSeipeKGsL-S5mf7QJK4QIiATirel69RHSMQk1KfdyGUY8' },
+                { date: '2025-01-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSHBBHTv8-7QbRAi7Q6WjUnAfsDYIJDw2bBtyG5mOZO3OU' },
+                { date: '2025-01-13', time: '06:59', url: 'n/a' },
+                { date: '2025-01-14', time: '06:59', url: 'n/a' }                                         
               ];      
       
 function updateIframeSrc() {
