--- a/year8-today.html
+++ b/year8-today.html
@@ -139,14 +139,16 @@
           <script>
             
               const schedule = [
-                { date: '2025-01-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSEEU-leGDgRrOQqpQPT_w2AW5riUgNDFYo7Y0sAMpYNMQ' },
-                { date: '2025-01-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQERG63fX3xTa_hSraxin89AejoZ_G-RkP4qTiJ0qEfDU0' },
-                { date: '2025-01-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSuiUBak9fbSL4VcIG6hJiGAS_8TU27Zqg9xA9IB1Z0nhw' },
-                { date: '2025-01-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQbSoVIjgYzSped1LC48_wKAepY9vMUNzZFxHFne-sTbuE' },
-                { date: '2025-01-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRl-6gOJbNlQoMR3j2zHIP0AUnDZdlkOPPtGn8ZSmhHtD4' },
-                { date: '2025-01-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSeipeKGsL-S5mf7QJK4QIiATirel69RHSMQk1KfdyGUY8' },
                 { date: '2025-01-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSHBBHTv8-7QbRAi7Q6WjUnAfsDYIJDw2bBtyG5mOZO3OU' },
                 { date: '2025-01-13', time: '06:59', url: 'n/a' },
+                { date: '2025-01-14', time: '06:59', url: 'n/a' },
+                { date: '2025-01-15', time: '06:59', url: 'n/a' },
+                { date: '2025-01-16', time: '06:59', url: 'n/a' },
+                { date: '2025-01-17', time: '06:59', url: 'n/a' },
+                { date: '2025-01-18', time: '06:59', url: 'n/a' },
+                { date: '2025-01-19', time: '06:59', url: 'n/a' },
+                { date: '2025-01-20', time: '06:59', url: 'n/a' },
+                { date: '2025-01-21', time: '06:59', url: 'n/a' } 
                 { date: '2025-01-14', time: '06:59', url: 'n/a' }                                         
               ];      
       
