--- a/Year7-today.html
+++ b/Year7-today.html
@@ -140,13 +140,13 @@
               // Array of objects with date, time, and corresponding URL
               const schedule = [
                 { date: '2025-01-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSd3tptizUDToAY1XHYtGz5AWeTVf2qF_YFGBFOaESp89E' },
-                { date: '2025-01-13', time: '06:59', url: 'n/a' },
-                { date: '2025-01-14', time: '06:59', url: 'n/a' },
-                { date: '2025-01-15', time: '06:59', url: 'n/a' },
-                { date: '2025-01-16', time: '06:59', url: 'n/a' },
-                { date: '2025-01-17', time: '06:59', url: 'n/a' },
-                { date: '2025-01-18', time: '06:59', url: 'n/a' },
-                { date: '2025-01-19', time: '06:59', url: 'n/a' },
+                { date: '2025-01-13', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTO7aPEqNFATY_LgRaq_xIMARp9OCUzzLUIYstnrfKhy6o' },
+                { date: '2025-01-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTLFxcRnyIeRrucgrwjit15AXJgpS9vAJQEayIrtLGzrYU' },
+                { date: '2025-01-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSOaL26JEHhRLZMDKUV-C8yAXBmniGniQJB9-AqlQ62vLM' },
+                { date: '2025-01-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSAJJbKNTntR6hx8-RVmCypAdWiU1y-iDkJflK9STaE5Kg' },
+                { date: '2025-01-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSqAc2QT1f-SK6UkkRYGrNeATKF92VfuQ4eQQlwC2goktE' },
+                { date: '2025-01-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSx_C7y1sTvT7TSF0qAuAcsARrR6zE5ABPYqrDm9Z_F2OM' },
+                { date: '2025-01-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQkRmNQC72bSKgLsFPXAF8sAVROWvg6-NUkcIr4bQuUN6g' },
                 { date: '2025-01-20', time: '06:59', url: 'n/a' },
                 { date: '2025-01-21', time: '06:59', url: 'n/a' }                        
               ];
