--- a/year8-answer.html
+++ b/year8-answer.html
@@ -143,9 +143,9 @@
                 { date: '2025-01-13', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ0H0pzvuO1Sa0nCcMKgJTLAS8lnXB6GF9Hfi4OotIpAN8' },
                 { date: '2025-01-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTQHJYRVEFWT5pu361GCNL-AYPAUNJs1JHXB_2dPNFRzTk' },
                 { date: '2025-01-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSqQFs8Dc77QpEtiF-GKT4GAf5-pgQQ--oJzeNQMBZ8oAs' },
-                { date: '2025-01-16', time: '06:59', url: 'n/a' },
-                { date: '2025-01-17', time: '06:59', url: 'n/a' },
-                { date: '2025-01-18', time: '06:59', url: 'n/a' },
+                { date: '2025-01-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSBNwbwzxnHRKlCfJLvcp9AAftLccCMPJjHJm_BL2VxxG8' },
+                { date: '2025-01-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTq0A8Tyl11QJd7oq3fJKXjAQm6IanBkPcN2M4W0W04tLA' },
+                { date: '2025-01-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTzBNH8aOxaQ6w8r3QKax6iAReB5PhyeWU9UAtzRXM43FY' },
                 { date: '2025-01-19', time: '06:59', url: 'n/a' },
                 { date: '2025-01-20', time: '06:59', url: 'n/a' },
                 { date: '2025-01-21', time: '06:59', url: 'n/a' }                     
