--- a/year8-today.html
+++ b/year8-today.html
@@ -143,10 +143,10 @@
                 { date: '2025-01-13', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQVc0TABjukS6K--uwfsFkFASZTjGdInpKXVbk_8i0PUC4' },
                 { date: '2025-01-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTQL94W9jhKRrbzb5-mG9ROAckn5UA4tZM5e_1WfLteS34' },
                 { date: '2025-01-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRXtH1yjIHWRpFg9qwniA3hAc2-58rEYfzTVikoBHuZCBM' },
-                { date: '2025-01-16', time: '06:59', url: 'n/a' },
-                { date: '2025-01-17', time: '06:59', url: 'n/a' },
-                { date: '2025-01-18', time: '06:59', url: 'n/a' },
-                { date: '2025-01-19', time: '06:59', url: 'n/a' },
+                { date: '2025-01-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRiWeXRG640SaGmeXGMCLxNAfCcty9PRRRYMM4VepH3lPM' },
+                { date: '2025-01-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRBvLoqK25BSauq8dFEgGbPAaHk8tyY5KX7atVJJA0-XJ0' },
+                { date: '2025-01-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTxvqHLnQ8ISrb_G9w1jUU2AVcFhneqX-0akMoCsztRn4E' },
+                { date: '2025-01-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ_A9LlwmHfSpOtaxH1zhWPAWZwlLv60epiNQ6UGQ10n8A' },
                 { date: '2025-01-20', time: '06:59', url: 'n/a' },
                 { date: '2025-01-21', time: '06:59', url: 'n/a' }                                       
               ];      
