--- a/Year7-today.html
+++ b/Year7-today.html
@@ -147,8 +147,8 @@
                 { date: '2025-01-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSqAc2QT1f-SK6UkkRYGrNeATKF92VfuQ4eQQlwC2goktE' },
                 { date: '2025-01-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSx_C7y1sTvT7TSF0qAuAcsARrR6zE5ABPYqrDm9Z_F2OM' },
                 { date: '2025-01-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQkRmNQC72bSKgLsFPXAF8sAVROWvg6-NUkcIr4bQuUN6g' },
-                { date: '2025-01-20', time: '06:59', url: 'n/a' },
-                { date: '2025-01-21', time: '06:59', url: 'n/a' }                        
+                { date: '2025-01-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRfQV7H5VwaRpB87git1DwPAXz7v3SEY9gYuBr6Zxfxdqo' },
+                { date: '2025-01-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRaLM0Rj1ZhRKzzhJ71oPsxAU4U0z2COan78n-9YeJ_RT0' }                        
               ];
       
               function updateIframeSrc() {
