--- a/year7-answer.html
+++ b/year7-answer.html
@@ -147,8 +147,8 @@
                 { date: '2025-01-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTQlFQWfyH0S6vexvWZY10zAYzPBlBySacAlc7sLWSV1ok' },
                 { date: '2025-01-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQD7Q1KE441QZPJARsf-CfNAQvsyLSQkvVBbR0mXrN3x0o' },
                 { date: '2025-01-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS9C-nA5pZkRp9jporMGxs8ATU086qxVABUc1H4jkpIqMU' },
-                { date: '2025-01-20', time: '06:59', url: 'n/a' },
-                { date: '2025-01-21', time: '06:59', url: 'n/a' },
+                { date: '2025-01-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR7WRZEVOfeSK4mIQm-im4MAcb5u2gkHTYe7h8PVt-w5g0' },
+                { date: '2025-01-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRkRlgRSUiYQrEevcu7PGLDAdHXwYt-RSSB8qgSN-1E9fY' },
                 { date: '2025-01-22', time: '06:59', url: 'n/a' }            
               ];
       
