--- a/year7-answer.html
+++ b/year7-answer.html
@@ -145,10 +145,10 @@
                 { date: '2025-01-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTN7wWue5UdQYkgDipNNCK6AXDuMO9tRcbkqGH2OZxTc-o' },
                 { date: '2025-01-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQAjJeNNS86Q6UbDIphnIVNAfdCEv_-bbVVKyH1Vlz3py8' },
                 { date: '2025-01-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTHZojt0la0Q6E1mjVYCIBDAa905Bx31ZJB2yzrE5Ct5V8' },
-                { date: '2025-01-27', time: '06:59', url: 'n/a' },
-                { date: '2025-01-28', time: '06:59', url: 'n/a' },
-                { date: '2025-01-29', time: '06:59', url: 'n/a' },
-                { date: '2025-01-30', time: '06:59', url: 'n/a' }            
+                { date: '2025-01-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQyyA5Nbu8XT5_2V-Z6IfZHAZUcgwoPheDtG1eWZOuVocI' },
+                { date: '2025-01-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS1j7680aUEQ4Rr0KhwzAcfAQhZon0EFfLt-r_0ryojX8s' },
+                { date: '2025-01-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSarKGuiiPtQ7E1ECCVb_azAcTLt0WNQer5_tljfoaFx_U' },
+                { date: '2025-01-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQfR63YowReSoIz7-TG8jzIAaCW84lkovBIZvFLF3U_Gms' }            
               ];
       
 function updateIframeSrc() {
